proc-macros/tests/ui/incorrect/sub/sub_conflicting_alias.stderr
error: "hello_is_goodbye" is already defined
 --> $DIR/sub_conflicting_alias.rs:6:5
  |
6 |     fn async_method(&self) -> RpcResult<()>;
  |        ^^^^^^^^^^^^
